--- a/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
+++ b/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
@@ -110,14 +110,14 @@ jobs:
           cd friendlywrt-rk3328/friendlywrt		
           ./scripts/feeds update -a		
           ./scripts/feeds install -a
-
       - name: Install Mods
         run: |
           cd friendlywrt-rk3328
 
           sed -i '/STAMP_BUILT/d' friendlywrt/feeds/packages/utils/runc/Makefile
           sed -i '/STAMP_BUILT/d' friendlywrt/feeds/packages/utils/containerd/Makefile
-
+          sed -i 's/tar.zst/tar.gz/g' friendlywrt/feeds/packages/utils/zstd/Makefile
+          sed -i 's/2c2366874bc449ff539614266d8c0d6ecdb4baf30bb65609c239ab4ed23c03c7/98e91c7c6bf162bf90e4e70fdbc41a8188b9fa8de5ad840c401198014406ce9e/g' friendlywrt/feeds/packages/utils/zstd/Makefile
           #cp ../patches/31-usb_wifi friendlywrt/package/base-files/files/etc/hotplug.d/usb/31-usb_wifi
 
           sed -i "/redirect_https/d" friendlywrt/package/network/services/uhttpd/files/uhttpd.config
