--- a/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
+++ b/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
@@ -146,7 +146,7 @@ jobs:
           
       - name: Switch to python3
         run: |
-          sudo rm /usr/bin/python
+          sudo rm -f /usr/bin/python
           sudo ln -s /usr/bin/python3 /usr/bin/python
 
       - name: Build OpenWrt
