--- a/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
+++ b/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
@@ -117,6 +117,8 @@ jobs:
 
           sed -i '/STAMP_BUILT/d' friendlywrt/feeds/packages/utils/runc/Makefile
           sed -i '/STAMP_BUILT/d' friendlywrt/feeds/packages/utils/containerd/Makefile
+          sed -i 's/0.54.3/0.53.2/g' friendlywrt/feeds/packages/devel/meson/Makefile
+          sed -i 's/f2bdf4cf0694e696b48261cdd14380fb1d0fe33d24744d8b2df0c12f33ebb662/3e8f830f33184397c2eb0b651ec502adb63decb28978bdc84b3558d71284c21f/g' friendlywrt/feeds/packages/devel/meson/Makefile
           sed -i 's/tar.zst/tar.gz/g' friendlywrt/feeds/packages/utils/zstd/Makefile
           sed -i 's/2c2366874bc449ff539614266d8c0d6ecdb4baf30bb65609c239ab4ed23c03c7/98e91c7c6bf162bf90e4e70fdbc41a8188b9fa8de5ad840c401198014406ce9e/g' friendlywrt/feeds/packages/utils/zstd/Makefile
           #cp ../patches/31-usb_wifi friendlywrt/package/base-files/files/etc/hotplug.d/usb/31-usb_wifi
